# RayTracer-IN204

./: CMakeLists.txt  Camera.cpp  Camera.hpp  Color.hpp  Material.cpp  Material.hpp  Moteur.hpp  MoteurVersion1.cpp  MoteurVersion1.hpp  Object.hpp  Objet.hpp  README.md  Rand.hpp  Ray.cpp  RayIntersect.cpp  RayTracer.hpp  Rectangle.cpp  Scene.xml  Scene1.xml  Scene10.xml  Scene2.xml  Scene3.xml  Scene4-1.xml  Scene4-4.xml  Scene4_3.xml  Scene5.xml  Scene7.xml  Scene8.xml  Scene9.xml  Sphere.cpp  Sphere.hpp  Triangle.cpp  Vect.cpp  Vector.cpp  World.cpp  a  dotobj.cpp  loadScene.cpp  loadScene.hpp  main.cpp  (+2 more)
image archive/: ColorsTest.ppm  HollowDielectricTest.ppm  a (2).ppm  a.ppm  antialiasing.ppm  depthoffield.ppm  fuzz.ppm  fuzz2.ppm  lambertian.ppm  noantialiasing.ppm  output (2).ppm  output (3).ppm  output (4).ppm  output (5).ppm  output1 (2).ppm  output1.ppm  output2.ppm  random.ppm  success.ppm  zoomedin.ppm
